[package]
name = "github-contributions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-recursion = "0.2"
async-stream = "0.3"
chrono = "0.4"
futures = "0.3"
octocrab = "0.10"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
